--- a/frontend/suggester.html
+++ b/frontend/suggester.html
@@ -410,12 +410,12 @@
             btnText.innerText = "Analyzing Requirements...";
             spinner.classList.remove('hidden');
 
-            try {
-                const res = await fetch('http://localhost:8000/suggest', {
-                    method: 'POST', 
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({ abstract: abstract, difficulty: diff, duration: dur, requirements: reqs })
-                });
+             try {
+                const res = await fetch('https://projectforge-backend.onrender.com/validate', {
+                 method: 'POST', 
+                 headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({abstract: txt})
+            });
                 
                 if(!res.ok) throw new Error();
                 const data = await res.json();
