Fix image folder casing

--- a/frontend/team.html
+++ b/frontend/team.html
@@ -209,7 +209,7 @@
             
             <div class="member-card">
                 <div class="avatar-box">
-                    <img src="images/immanuel.jpg" alt="Immanuel Thomas J" class="avatar-img">
+                    <img src="Images/immanuel.jpg" alt="Immanuel Thomas J" class="avatar-img">
                 </div>
                 <h3 class="member-name">Immanuel Thomas J</h3>
                 <div class="member-role">Team Member</div>
@@ -225,7 +225,7 @@
 
             <div class="member-card">
                 <div class="avatar-box">
-                    <img src="images/jackson.png" alt="Jackson" class="avatar-img">
+                    <img src="Images/jackson.png" alt="Jackson" class="avatar-img">
                 </div>
                 <h3 class="member-name">Jackson</h3>
                 <div class="member-role">Team Member</div>
@@ -241,7 +241,7 @@
 
             <div class="member-card">
                 <div class="avatar-box">
-                    <img src="images/jenish.png" alt="Jenish" class="avatar-img">
+                    <img src="Images/jenish.png" alt="Jenish" class="avatar-img">
                 </div>
                 <h3 class="member-name">Jenish</h3>
                 <div class="member-role">Team Member</div>
