--- a/frontend/team.html
+++ b/frontend/team.html
@@ -218,8 +218,8 @@
                 </p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/immanuel-thomas-j/" target="_blank" class="social-link"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://github.com/immanuel-thomas-j" class="social-link"><i class="fa-brands fa-github"></i></a>
+                    <a href="immanuelthomasj10@gmail.com" class="social-link"><i class="fa-solid fa-envelope"></i></a>
                 </div>
             </div>
 
@@ -234,8 +234,8 @@
                 </p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/jackson-jp-5b3aa8315/" target="_blank" class="social-link"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://github.com/Jacksonfio" class="social-link"><i class="fa-brands fa-github"></i></a>
+                    <a href="jacksonjp646@gmail.com" class="social-link"><i class="fa-solid fa-envelope"></i></a>
                 </div>
             </div>
 
@@ -250,8 +250,8 @@
                 </p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/jenish-prasad-7a5b3a25a/" target="_blank" class="social-link"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://github.com/THUNDERJ-7" class="social-link"><i class="fa-brands fa-github"></i></a>
+                    <a href="jenishs419@gmail.com" class="social-link"><i class="fa-solid fa-envelope"></i></a>
                 </div>
             </div>
 
