--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjectForge AI | Intelligent Dev Copilot</title>
+    <title>ProjectForge AI</title>
+    <link rel="icon" type="image/png" href="Images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -439,7 +440,7 @@
             
             <div class="footer-col">
                 <h4>Hackathon</h4>
-                <a href="#">View Repository</a>
+                <a href="https://github.com/immanuel-thomas-j/ProjectForge">View Repository</a>
                 <a href="#">Live Demo</a>
                 <a href="team.html">Team Info</a>
             </div>
