Updated Live Demo Link

--- a/frontend/planner.html
+++ b/frontend/planner.html
@@ -379,7 +379,7 @@
 
     <footer class="footer-compact">
         <div class="footer-container">
-            <span>© 2025 ProjectForge AI</span>
+            <span>ProjectForge AI</span>
             <div class="footer-links">
                 <a href="index.html">Back to Home</a>
             </div>
