--- a/frontend/index.html
+++ b/frontend/index.html
@@ -441,7 +441,8 @@
             <div class="footer-col">
                 <h4>Hackathon</h4>
                 <a href="https://github.com/immanuel-thomas-j/ProjectForge">View Repository</a>
-                <a href="#">Live Demo</a>
+                <a href="https://drive.google.com/file/d/1UxjSvpgqJ75M84OkCvQR1cnB-qfIyVWD/view?usp=sharing
+">Live Demo</a>
                 <a href="team.html">Team Info</a>
             </div>
         </div>
